methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:7: error: value += is not a member of Int
      vuBiscuit += 1
                ^