methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  def vuBiscuit = 0
  for(i<-1 to 6)
  {
    avance()
    if(estSurBiscuit())
    	vuBiscuit += 1
  }
  recule(6)
  return vuBiscuit!=0
}

haveBaggle()
